--- a/app/src/main/res/layout/activity_content_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_detail_screen.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Activity.ContentDetailScreen">
+    tools:context=".UI.Activity.ContentImageDetailScreen">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,73 +17,86 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <com.alexzh.circleimageview.CircleImageView
+                    android:id="@+id/profile_photo"
+                    android:layout_width="100px"
+                    android:layout_height="100px"
+                    android:src="@drawable/profile_image"
+                    android:scaleType="centerCrop"
+                    android:gravity="fill"
+                    app:view_borderWidth="1dp"
+                    app:view_borderColor="#cccccc" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/profile_name"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        android:layout_gravity="center"/>
+
+
+                </LinearLayout>
+
+
+
+
+                <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="Follow"
+                    android:layout_gravity="center"
+                    android:id="@+id/follow_profile"
+                    android:textColor="#dd3e3e"/>
+
+            </LinearLayout>
+
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
+                <fragment
+                    android:layout_below="@+id/id_video_play_text"
+                    android:id="@+id/youtube_player_fragment_top"
+                    android:name="com.google.android.youtube.player.YouTubePlayerFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:orientation="vertical"
-                    android:background="@color/black"/>
-
+                    android:layout_height="350dp"/>
 
                 <ImageView
                     android:layout_width="12dp"
                     android:layout_height="12dp"
                     android:tint="@color/white"
+                    android:visibility="gone"
+                    android:id="@+id/back_view"
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="20dp"
-                    android:src="@drawable/ic_back2"/>
+                    app:srcCompat="@drawable/ic_back2"/>
 
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_play1"
-                    android:layout_gravity="center"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginBottom="12sp"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="5dp"
-                        android:orientation="horizontal">
-
-                        <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplayRegular
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="00:14 / 41:12"
-                            android:textColor="@color/white"
-                            android:textSize="12sp" />
-
-                        <ImageView
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_marginRight="12dp"
-                            android:src="@drawable/ic_expand" />
-                    </LinearLayout>
-
-
-                    <SeekBar
-                        android:layout_width="match_parent"
-                        android:layout_height="1.5dp"
-                        android:layout_marginBottom="3dp"
-                        android:progress="20"
-                        android:progressDrawable="@drawable/seekbar_style"
-                        android:splitTrack="false"
-                        android:thumbTint="#00000000" />
-                </LinearLayout>
 
             </FrameLayout>
 
@@ -99,13 +112,15 @@
                     android:layout_height="wrap_content"
                     android:textColor="#a0a0a0"
                     android:textSize="14sp"
-                    android:text="Sports"/>
+                    android:id="@+id/subcategory_of_content"
+                    android:text=""/>
 
 
                 <tv.merabihar.app.merabihar.CustomFonts.MyTextView_SF_Pro_Light
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Water Sports in Bihar"
+                    android:id="@+id/content_title"
+                    android:text=""
                     android:textSize="18sp"
                     android:textColor="@color/txt_color"
                     android:layout_marginTop="3dp"/>
@@ -122,14 +137,15 @@
                         android:layout_width="10dp"
                         android:layout_height="10dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_clock1"/>
+                        app:srcCompat="@drawable/ic_clock1"/>
 
 
                     <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplayRegular
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:text="14 Mins"
+                        android:id="@+id/read_time"
+                        android:text=""
                         android:textColor="@color/txt_color"
                         android:textSize="12sp" />
                 </LinearLayout>
@@ -139,6 +155,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="#sports #bihar"
+                    android:visibility="gone"
                     android:textSize="14sp"
                     android:layout_marginTop="15dp"
                     android:textColor="@color/colorPrimary"/>
@@ -147,7 +164,7 @@
                 <tv.merabihar.app.merabihar.CustomFonts.MyTextView_SF_Pro_Light
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bihar management has taken projects within the latest past to make the state extra adventure sports pleasant. The authorities consequently introduced its dream mission of “Adventure Water Sports Facility” at Ganga River to pave the manner for the introduction of various types of watersports in the famend river. The watersports facility has been deliberate at Ganga River in Patna that's located at its bank. The twin purpose of launching such undertaking inside the state capital is to make certain that the project completes in its stipulated time and most importantly the traffic discover higher options to involve in the more than one journey sports inclusive of watersports facility at the Gandhi Ghat Patna. It has been planned to develop consistent with the ones in different components of the country just like the well-known floor water aquatics of Goa, Pondicherry, Maharashtra and Karnataka amongst others. Proposed watersports facility is simply going to facilitate ideal alternatives to the Patna traffic to involve in such unique adventure sports. It may be a remarkable source of eco-tourism as well. The proposed attractions of watersports in Patna are availability of Jet skiing motorcycles; water boats; towable inflatable rubber rafts and oxygen-filled water balls among others. Such proposed developmental projects are going to make a huge difference within the country of Bihar via a lift to sort of sports activities sports."
+                    android:id="@+id/content_desc"
                     android:textColor="@color/txt_color"
                     android:textSize="14sp"
                     android:layout_marginTop="10dp"
