--- a/app/src/main/res/layout/activity_tab_search.xml
+++ b/app/src/main/res/layout/activity_tab_search.xml
@@ -28,6 +28,7 @@
 
             <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
                 android:id="@+id/autotext"
+                android:enabled="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rect"
@@ -44,6 +45,87 @@
 
 
         </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
+
+                <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplaySemibold
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/txt_color"
+                    android:text="Trending #Tags"
+                    android:textSize="17sp"/>
+
+                <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplaySemibold
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:id="@+id/view_tags"
+                    android:text="VIEW ALL"
+                    android:textColor="#dd3e3e"/>
+            </LinearLayout>
+
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/trending_tags"
+                    android:scrollbars="none"
+                    android:layout_margin="5dp"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    />
+
+                <ProgressBar
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:id="@+id/progressBar_content"
+                    android:layout_centerInParent="true"/>
+
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/category_layout"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="vertical">
+
+                <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplaySemibold
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/txt_color"
+                    android:text="Categories"
+                    android:textSize="18sp"/>
+                <tv.merabihar.app.merabihar.CustomViews.CustomGridView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:numColumns="3"
+                    android:background="@android:color/transparent"
+                    android:layout_margin="5dp"
+                    android:choiceMode="singleChoice"
+                    android:id="@+id/category_grid_view"
+
+
+
+                    />
+
+            </LinearLayout>
+
+
 
 
         </LinearLayout>
