--- a/app/src/main/res/layout/adapter_content_list_design.xml
+++ b/app/src/main/res/layout/adapter_content_list_design.xml
@@ -6,6 +6,7 @@
     android:layout_height="250dp"
     android:orientation="vertical"
     android:background="#f2f2f2"
+    android:id="@+id/content_detail"
     android:elevation="8dp"
     android:layout_margin="10dp"
     >
@@ -78,6 +79,7 @@
 
             <LinearLayout
                 android:layout_marginTop="12dp"
+                android:id="@+id/content_detail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
