--- a/app/src/main/res/layout/adapter_content_lists_design.xml
+++ b/app/src/main/res/layout/adapter_content_lists_design.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+
     android:background="#f2f2f2"
     android:elevation="8dp"
-    android:layout_margin="10dp"
+
     >
 
     <android.support.v7.widget.CardView
@@ -93,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:layout_marginTop="5dp"
-                android:id="@+id/content_detail_layout"
+                android:id="@+id/content_detail"
                 >
 
                 <com.makeramen.roundedimageview.RoundedImageView
@@ -120,6 +121,157 @@
 
 
             </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:weightSum="4"
+                android:orientation="horizontal">
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:orientation="vertical"
+
+                    >
+
+                <ImageView
+                    android:id="@+id/whatsapp_share"
+                    android:layout_width="80px"
+                    android:layout_height="80px"
+                    android:src="@drawable/whatsapp_icon"
+                    android:scaleType="centerCrop"
+
+                    />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/likes_image"
+                        android:layout_width="80px"
+                        android:layout_height="80px"
+                        android:layout_gravity="center"
+                        android:src="@drawable/like_icon"
+                        android:scaleType="centerCrop"
+
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/likes_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/like_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/unlikes_image"
+                        android:layout_width="80px"
+                        android:layout_height="80px"
+                        android:layout_gravity="center"
+                        android:src="@drawable/unlike_icon"
+                        android:scaleType="centerCrop"
+
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/unlikes_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/dislike_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/comments_image"
+                        android:layout_width="80px"
+                        android:layout_height="80px"
+
+                        android:src="@drawable/comments_icon"
+                        android:scaleType="centerCrop"
+
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/comments_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+
+
+            </LinearLayout>
 
 
             <LinearLayout
