--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,6 +13,13 @@
         android:layout_height="match_parent"
         android:background="@drawable/texture">
 
+        <ProgressBar
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:id="@+id/progressBar"
+            android:layout_centerInParent="true"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,20 +31,7 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="30dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_weight="1">
-                    <ImageView
 
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="@drawable/ic_tool2"
-                        android:layout_gravity="center"
-                        />
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_weight="1"
@@ -44,30 +39,22 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <com.alexzh.circleimageview.CircleImageView
-                        android:id="@+id/banar1"
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profile_photo"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/niz_pic"
                         android:layout_gravity="center"
-                        android:gravity="fill"
+                        android:elevation="50dp"
+                        android:padding="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/profile_image"
                         app:view_borderWidth="1dp"
-                        app:view_borderColor="#cccccc" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                        app:view_borderColor="#cccccc"/>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_sign2"
-                        android:layout_gravity="center" />
+
 
                 </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -79,7 +66,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:letterSpacing="0.1"
-                    android:text="Mohammed Nishar"
+                    android:id="@+id/profile_name"
+                    android:text=""
                     android:textSize="18dp"
                     android:textColor="#fff"
                     android:textAlignment="center"
@@ -89,8 +77,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:letterSpacing="0.1"
-                    android:text="Simply doing for making history"
-                    android:textSize="18dp"
+                    android:id="@+id/profile_about"
+                    android:text=""
+                    android:textSize="14dp"
                     android:textColor="#fff"
                     android:textAlignment="center"
                     android:layout_marginTop="10dp"/>
@@ -116,7 +105,8 @@
                     <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Roboto_Regular
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="17"
+                        android:text="0"
+                        android:id="@+id/tvPosts"
                         android:textSize="24dp"
                         android:textColor="#FF0000"
                         android:layout_gravity="center"/>
@@ -130,6 +120,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/line_post"
                         android:background="@drawable/line"
                         android:layout_marginTop="5dp"
                         android:layout_gravity="center"/>
@@ -152,7 +143,8 @@
                     <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Roboto_Regular
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="2"
+                        android:text="0"
+                        android:id="@+id/tvFollowers"
                         android:textSize="24dp"
                         android:textColor="#FFF"
                         android:layout_gravity="center"/>
@@ -162,6 +154,15 @@
                         android:letterSpacing="0.1"
                         android:text="Followers"
                         android:textColor="#FFF"
+                        android:layout_gravity="center"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/line_follwers"
+                        android:visibility="gone"
+                        android:background="@drawable/line"
+                        android:layout_marginTop="5dp"
                         android:layout_gravity="center"/>
 
                 </LinearLayout>
@@ -184,7 +185,8 @@
                     <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Roboto_Regular
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="17"
+                        android:text="0"
+                        android:id="@+id/tvFollowing"
                         android:textSize="24dp"
                         android:textColor="#FFF"
                         android:layout_gravity="center"/>
@@ -196,24 +198,74 @@
                         android:textColor="#FFf"
                         android:layout_gravity="center"/>
 
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/line_follwings"
+                        android:visibility="gone"
+                        android:background="@drawable/line"
+                        android:layout_marginTop="5dp"
+                        android:layout_gravity="center"/>
+
 
                 </LinearLayout>
 
 
             </LinearLayout>
 
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/follow_profiles"
+                android:scrollbars="none"
+                android:layout_margin="5dp"
+
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                />
+
             <LinearLayout
 
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <ListView
+                <!-- <android.support.v4.view.ViewPager
+                     android:id="@+id/list_profiles"
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     app:layout_behavior="@string/appbar_scrolling_view_behavior"  />-->
+
+                <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Roboto_Regular
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:letterSpacing="0.1"
+                    android:id="@+id/no_post"
+                    android:text="No Stories"
+                    android:visibility="gone"
+                    android:textSize="18dp"
+                    android:textColor="#fff"
+                    android:textAlignment="center"
+                    android:layout_marginTop="20dp"/>
+
+                <!--<ListView
                     android:id="@+id/listview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
 
-                </ListView>
+                </ListView>-->
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/listviews"
+                    android:layout_marginStart="2dp"
+                    android:clipToPadding="false"
+                    android:paddingTop="2dp"
+                    android:nestedScrollingEnabled="false"/>
+
+
+
 
             </LinearLayout>
 
@@ -221,48 +273,5 @@
     </FrameLayout>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</LinearLayout>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</android.support.v4.widget.NestedScrollView>
 
