--- a/app/src/main/res/layout/activity_content_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_detail_screen.xml
@@ -56,6 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:id="@+id/profile_lay_content"
                     android:layout_gravity="center"
                     android:orientation="vertical">
 
