--- a/app/src/main/res/layout/activity_content_image_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_image_detail_screen.xml
@@ -43,6 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:id="@+id/profile_lay_content"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:orientation="vertical">
