--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -84,6 +84,19 @@
                     android:textAlignment="center"
                     android:layout_marginTop="10dp"/>
 
+                <android.support.v7.widget.AppCompatButton
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:visibility="gone"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:text=""
+                    android:textColor="@color/white"
+                    android:id="@+id/follow_unfollow"
+                    android:background="@drawable/mediatransperent_ract"/>
+
+
             </LinearLayout>
 
 
