--- a/app/src/main/res/layout/adapter_content_lists_design.xml
+++ b/app/src/main/res/layout/adapter_content_lists_design.xml
@@ -49,6 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:id="@+id/profile_lay_content"
                     android:orientation="vertical">
 
                     <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
@@ -124,8 +125,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-
+                android:layout_height="80dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:weightSum="4"
@@ -142,8 +142,8 @@
 
                 <ImageView
                     android:id="@+id/whatsapp_share"
-                    android:layout_width="80px"
-                    android:layout_height="80px"
+                    android:layout_width="100px"
+                    android:layout_height="100px"
                     android:src="@drawable/whatsapp_icon"
                     android:scaleType="centerCrop"
 
@@ -156,15 +156,17 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="5dp"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/likes_image"
-                        android:layout_width="80px"
-                        android:layout_height="80px"
+                        android:layout_width="100px"
+                        android:layout_height="100px"
+                        android:clickable="true"
                         android:layout_gravity="center"
                         android:src="@drawable/like_icon"
                         android:scaleType="centerCrop"
@@ -200,15 +202,16 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="5dp"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/unlikes_image"
-                        android:layout_width="80px"
-                        android:layout_height="80px"
+                        android:layout_width="100px"
+                        android:layout_height="100px"
                         android:layout_gravity="center"
                         android:src="@drawable/unlike_icon"
                         android:scaleType="centerCrop"
@@ -242,15 +245,16 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="5dp"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/comments_image"
-                        android:layout_width="80px"
-                        android:layout_height="80px"
+                        android:layout_width="100px"
+                        android:layout_height="100px"
 
                         android:src="@drawable/comments_icon"
                         android:scaleType="centerCrop"
