--- a/app/src/main/res/layout/fragment_for_you.xml
+++ b/app/src/main/res/layout/fragment_for_you.xml
@@ -32,6 +32,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
+                    android:visibility="gone"
                     android:text="VIEW ALL"
                     android:textColor="#dd3e3e"/>
             </LinearLayout>
