--- a/app/src/main/res/layout/activity_friend_list_screen.xml
+++ b/app/src/main/res/layout/activity_friend_list_screen.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tv.merabihar.app.merabihar.UI.Activity.Influencer.FriendListScreen">
+    android:orientation="vertical"
+    android:background="@drawable/theme_combo"
+    tools:context="tv.merabihar.app.merabihar.UI.Activity.FriendList.FriendListScreen">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="60dp"
+        android:background="#7034fa"
+        app:tabSelectedTextColor="#FFFFFF"
+        app:tabMode="fixed"
+        app:tabTextAppearance="@style/MineCustomTabText"
+        app:tabIndicatorColor="@android:color/transparent"
+        android:tabStripEnabled="false"
+        app:tabTextColor="#FFFFFF"
+        android:id="@+id/influnecer_friends_tabs"/>
+
+
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/friends_list_vp"/>
+
+
+</LinearLayout>
