--- a/app/src/main/res/layout/activity_income.xml
+++ b/app/src/main/res/layout/activity_income.xml
@@ -1,16 +1,30 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-     android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:id="@+id/income_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:layout_margin="10dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:id="@+id/income_toolbar"
+        />
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="8dp"
         app:cardCornerRadius="15dp"
-        app:cardElevation="4dp">
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/income_toolbar"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,83 +34,153 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="120dp">
+                android:layout_height="120dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:padding="15dp"
-                    android:orientation="vertical"
                     android:gravity="center_horizontal"
-                    android:layout_height="match_parent">
+                    android:orientation="vertical"
+                    android:padding="15dp">
 
                     <TextView
-                        android:textSize="17dp"
-                        android:textColor="@color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Coins"/>
+                        android:text="Coins"
+                        android:textColor="@color/white"
+                        android:textSize="17dp" />
 
                     <TextView
+                        android:id="@+id/income_totalcoins_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:text="50"
                         android:textColor="@color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="30dp"
-                        android:text="50"/>
+                        android:textSize="30dp" />
 
 
                 </LinearLayout>
 
                 <ImageView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:src="@drawable/arrow"
                     android:layout_height="wrap_content"
-                    />
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/arrow" />
 
                 <LinearLayout
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:padding="15dp"
-                    android:orientation="vertical"
                     android:gravity="center_horizontal"
-                    android:layout_height="match_parent">
+                    android:orientation="vertical"
+                    android:padding="15dp">
 
                     <TextView
-                        android:textSize="17dp"
-                        android:textColor="@color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Rupees"/>
+                        android:text="Rupees"
+                        android:textColor="@color/white"
+                        android:textSize="17dp" />
+
                     <TextView
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/white"
+                        android:id="@+id/income_totalrupees_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="30dp"
-                        android:text="₹1"/>
+                        android:layout_marginTop="10dp"
+                        android:text="₹1"
+                        android:textColor="@color/white"
+                        android:textSize="30dp" />
                 </LinearLayout>
 
             </LinearLayout>
 
             <Button
                 android:layout_width="150dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Withdraw"
+                android:id="@+id/income_withdraw_btn"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/mediatransperent_ract"
-                android:textColor="@color/white"
-                android:layout_marginBottom="5dp"
-                android:layout_height="wrap_content" />
+                android:text="Withdraw"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
 
-
-
-
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="98dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:text="The Income Tax Department, also referred to as IT Department, is a government agency in charge of monitoring the income tax collection by the Government of India. It functions under the Department of Revenue of the Ministry of Finance"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <LinearLayout
+        android:layout_width="365dp"
+        android:layout_height="180dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.548">
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_marginTop="15dp"
+            android:layout_width="0dp"
+            android:gravity="right"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/income_earn_more_btn"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/non_transparent_button"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:text="Earn More"
+                android:textColor="@color/white" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_marginTop="15dp"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/income_share_btn"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/non_transparent_button"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:text="Share"
+                android:textColor="@color/white" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+</android.support.constraint.ConstraintLayout>
