--- a/app/src/main/res/layout/earn_money_popup.xml
+++ b/app/src/main/res/layout/earn_money_popup.xml
@@ -2,8 +2,10 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="350dp"
-    android:layout_height="350dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="10dp"
+    android:background="@drawable/login_ract"
     android:layout_gravity="center">
 
     <android.support.v7.widget.CardView
@@ -11,7 +13,7 @@
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:cardElevation="4dp"
-        app:cardCornerRadius="15dp"
+        app:cardCornerRadius="0dp"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
         <LinearLayout
